# edc-meshtastic

./: .gitignore  README.md  fam-keys.env.example  pyproject.toml  setup-fam-node.sh  verify-router.sh
.github/workflows/: ci.yml  release.yml
packaging/: entrypoint.py  meshprov.spec
sh/: setup-router.sh
src/meshprov/: __init__.py  cli.py  commands.py  device.py  keys.py  profiles.py
tests/: test_cli_and_profiles.py  test_keys.py
